04-06-2005 <Qball> <Qball@qballcow.nl>	
	* src/playlist3.c:		Fixed bug that when playlist changes
	the playlist search doesn't update.


02-06-2005 <Qball> <Qball@qballcow.nl>
	* src/player.c:			Don't display *** in title when
	multiline.
	* src/player.c:			Multiline title's that are to width
	arent drawn on the edge anymore. (there now is a 2px left margin)
	* src/main.c:			Fixed bugs that when songs are removed
	at the end of the playlist the playlist isn't updated. 


31-05-2005 <Qball> <Qball@qballcow.nl>
	* src/playlist3.c:		possibly Fixed bug in artist browser that
	caused artist "Eric Clapton" and album "Eric Clapton" didnt work.
	* src/playlist3.c:		Custom browser, support for up to 3
	levels deep.
	* src/main.c:			Removed wrong error message.

28-05-2005 <Qball> <Qball@qballcow.nl>
	* glade/gmpc.glade:		Re-enabled key-bindings.

24-05-2005 <Qball> <Qball@qballcow.nl>
	* src/mpdinteraction.c:		set window title on connect/disconnect
	* src/libmpc.d:			Support for mpdSong call of the window
	* src/playlist3.c:		Support (mpd =0.12) for showing
	id3tags of db items
23-05-2005 <Qball> <Qball@qballcow.nl>
	* src/libmpdclient.[c|h]:	Installed version with qball "advanced
	search and list" functions
	* src/libmpd.[c|h]:		support for qball patch
	* src/plyalist3.c:		Genre browser partially implemented

17-05-2005 <Qball> <Qball@qballcow.nl>
	* src/libmpd.[c|h]:	Moved the struct MpdObj definition to the .c
	file and typedeffed it in the .h file.. using internall function from
	you're C code will now result in compile errors.
	* src/main.c:		Removed direct usage of MpdObj internals.
	* src/mpdinteraction.c:	Removed direct usage of MpdObj internals.
	* src/player.c:		'\n' in window title is now replaced by a dash
	'-'
15-05-2005 <Qball> <Qball@qballcow.nl>	
	* doc/libmpd.tex:	Documentation file for libmpd.. (type
	latex2html for nice manual)
	* src/player.c:		Remove breakline from window title
	* src/player.c:		Don't scroll on multiline title.